# evento

./: .gitignore  AGENTS.md  LICENSE.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  turbo.json
.github/workflows/: cleanup.yml  deploy.yml
apps/agent-service/: .env.example  main.py  package.json  pyproject.toml
apps/agent_service/: .dockerignore  .pyre_configuration  Dockerfile  package.json  pyproject.toml  test_image_gen.py
apps/agent_service/app/: .env.example  __init__.py  agent.py  config.py  main.py
apps/agent_service/app/agents/: __init__.py  content_generation_manager.py  content_generator.py  event_info_gatherer.py  models.py  multimodal_content_creator.py  orchestrator.py  research_and_planner.py  video_generator.py
apps/agent_service/app/api/: auth.py  chat.py  events.py  media.py
apps/agent_service/app/models/: __init__.py  chat.py  events.py
apps/agent_service/app/services/: firestore_service.py  storage_service.py
apps/agent_service/app/tools/: __init__.py  datetime_tool.py  video_tool.py
apps/agent_service/app/utils/: constants.py  helpers.py
apps/agent_service/scripts/: create_agent_engine.py
apps/api-service/: .env.example  package.json
apps/web/: .env.example  .firebaserc  index.html  package.json
apps/web/src/: App.tsx  (+1 more)
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  Fix Multimodal Image Generation Pipeline.md  Fixing Scroll and User Image Uploads.md  IMPLEMENTATION_PLAN.md  Refine Agent UX and Logic.md  deployment_checklist.md  frontend_implementation_plan.md  productivity_agent_implementation_plan.md  structured_multimodal_response_implementation_plan.md
(+34 files in other folders)
